[workspace]
resolver = "2"
members = [
    "common",
    "benches",
    "cli",
    "servers/axum-server",
    "servers/actix-server",
    "servers/rocket-server",
    "servers/warp-server",
    "servers/tide-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
