[package]
name = "quic-transfer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "quic-transfer"
path = "src/main.rs"

[[bin]]
name = "quic-signaling"
path = "src/signaling_server.rs"

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "net", "sync"] }
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tar = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = "0.24"
url = "2"
rand = "0.9"
