[package]
name = "dnscrypt-resolver"
version = "0.1.0"
edition = "2021"
description = "A local DNSCrypt recursive resolver with caching, prefetch and statistics API"

[[bin]]
name = "dnscrypt-resolver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
trust-dns-client = "0.23"
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
xsalsa20poly1305 = "0.9"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
async-trait = "0.1"
byteorder = "1.5"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
prometheus = "0.13"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
