[package]
name = "esni-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rustls = "0.23"
rustls-pki-types = "1"
clap = { version = "4.4", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"
trust-dns-resolver = { version = "0.23", features = ["dnssec-ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
thiserror = "1.0"
parking_lot = "0.12"
ahash = "0.8"
crossbeam-queue = "0.3"
num_cpus = "1.16"
ring = "0.17"
x25519-dalek = "2.0"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
