[package]
name = "bench-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
benches = { path = "../benches" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
