[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
rand = "0.8"

[dev-dependencies]
