[package]
name = "pointcloud-webrtc"
version = "0.1.0"
description = "Point Cloud WebRTC Transmission App"
authors = ["you"]
edition = "2021"

[lib]
name = "pointcloud_webrtc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
nalgebra = "0.32"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1.5"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
webrtc = "0.9"
webrtc-util = "0.9"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
