[package]
name = "gesture-recognizer"
version = "0.1.0"
description = "Real-time gesture recognizer powered by ONNX Runtime"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["path-resolver", "resources"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2", features = ["load-dynamic"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "jpeg_rayon"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
time = "0.3"
ndarray = "0.16"

[lib]
name = "gesture_recognizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
