[package]
name = "pg-proxy"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL transparent compression proxy with LZ4"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-native-certs = "0.7"
rcgen = "0.13"
time = { version = "0.3", features = ["formatting", "macros", "local-offset", "serde"] }
lz4_flex = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bytes = "1.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
async-trait = "0.1"
base64 = "0.22"
regex = "1.10"
pem = "3.0"
