[package]
name = "barcode-scanner-manager"
version = "0.1.0"
description = "USB Barcode Scanner Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "barcode_scanner_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hidapi = "2.5"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
