[package]
name = "voice-command"
version = "1.0.0"
description = "端侧语音命令词识别系统"
authors = ["VoiceCommand"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
cpal = "0.15"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
ndarray = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
hound = "3.5"
rustfft = "6"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
noisy_float = "0.2"
dasp = "0.11"
crossbeam = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
