[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-server"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
actix-web = { version = "4.0", features = ["cookies"] }
actix-files = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
once_cell = "1.19"
mime_guess = "2.0"
chrono = "0.4"
actix-http = "3.0"
